Make open content stay white. This implicitly avoids the flickering problem when the mouse goes over bootstrap tooltips.

--- a/oneflow/core/static/sass/_read.scss
+++ b/oneflow/core/static/sass/_read.scss
@@ -199,6 +199,14 @@
     }
 }
 
+.open_content {
+    /*
+        Make the content white, like the hover. this avoids
+        disgracefull flip/flaps on mouse out while we read.
+    */
+    background-color: #fff;
+}
+
 .read-list-row {
 
     .article {
